--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
         <div class="mdl-textfield mdl-js-textfield">
-            <textarea class="mdl-textfield__input" type="text" rows="4" cols="80" id="text">Enter their text here, and find out what they really think.</textarea>
+            <textarea class="mdl-textfield__input" type="text" rows="4" cols="80" id="text"></textarea>
             <label class="mdl-textfield__label" for="sample5">Enter your text here.</label>
         </div>
         <br>
